Branch for TSCC

--- a/html/pending.html
+++ b/html/pending.html
@@ -3,12 +3,12 @@
 
 <head>
   <link rel="stylesheet" type="text/css" href="static/styles.css">
-  <title>Comet Reverse Proxy</title>
+  <title>TSCC Reverse Proxy</title>
   <script language="javascript" src="static/timers.js"></script>
 </head>
 
 <body onload="timerHandle=window.setInterval(countdownReload,1000)">
-  <h1>Comet Reverse Proxy Service</h1>
+  <h1>TSCC Reverse Proxy Service</h1>
   <h2>Phase 1 of 2: Pending</h2>
   <p>Waiting for your job to start on a compute node...</p>
   
