--- a/html/default.html
+++ b/html/default.html
@@ -7,10 +7,10 @@
 
 <head>
   <link rel="stylesheet" type="text/css" href="static/styles.css">
-  <title>Comet Reverse Proxy</title>
+  <title>TSCC Reverse Proxy</title>
 </head>
 <body>
-  <h1>Comet Reverse Proxy Service</h1>
+  <h1>TSCC Reverse Proxy Service</h1>
   <h2>Default</h2>
   <p>If you are seeing this page, there was probably an error. If your notebook doesn't show up in a couple minutes, you may have to try again. If you made a change to your scripts, revert or fix them and try again.</p>
 </body>
