--- a/html/oops.html
+++ b/html/oops.html
@@ -6,10 +6,10 @@
 
 <head>
   <link rel="stylesheet" type="text/css" href="static/styles.css">
-  <title>Comet Reverse Proxy</title>
+  <title>TSCC Reverse Proxy</title>
 </head>
 <body>
-  <h1>Comet Reverse Proxy Service</h1>
+  <h1>TSCC Reverse Proxy Service</h1>
   <h2>Oops!</h2> 
   <p>Error: Invalid GET request</p>
   <p>If you made a different GET request to the reverse proxy than the base solution, that may be the issue.</p>
