--- a/html/styletest.html
+++ b/html/styletest.html
@@ -5,7 +5,7 @@
 <!DOCTYPE html>
 
 <head>
-  <link rel="stylesheet" type="text/css" href="static/styles.css">
+  <link rel="stylesheet" type="text/css" href="static/bfs-main.css">
   <title>Comet Reverse Proxy</title>
 </head>
 <body>
